Thu Feb 15 18:14:48 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/REC/Makefile.am: updated

Thu Feb 15 17:40:28 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxlst/functions.c: fixed ID generation
	* doc/xslt.html doc/html/*.html: updated/regenerated the doc

Thu Feb 15 13:34:42 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/numbers.c: removed a couple of memleaks

Thu Feb 15 12:41:44 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.[ch]: exported pattern matching interfaces
	  for numbers.c and future debug module
	* libxslt/numbers.c: updated to new interface, should avoid
	  unnecessary recompilation of patterns.
	* libxslt/xsltutils.[ch]: cleanup
	* tests/REC/gmon.out: removed :-)

Wed Feb 14 19:13:33 CET 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/numbers.c: implemented level=any
	* libxslt/transform.c: corrected some default values
	* tests/REC/test-7.7-*.*: added

Wed Feb 14 18:07:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.c: priorities were horribly broken, hope it's
	  fixed

Wed Feb 14 15:39:06 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES libxslt/imports.h libxslt/pattern.[ch]
	  libxslt/xsltInternals.h libxslt/transform.[ch]
	  libxslt/templates.c libxslt/xslt.c:
	  Added apply-imports, keep a stack of running templates
	* libxslt/xsltutils.c: bugfixes, gather the output informations
	  down the cascade
	* tests/xmlspec/Makefile.am tests/xmlspec/REC-xml-2e.xsl
	  tests/xmlspec/diffspec.xsl tests/xmlspec/xmlspec.xsl: running
	  the real set of transformation on XML-1.0 2e generages a near
	  perfect HTML. Needs just more number fixes and implementation
	  and an obscure problem in 3.3.3

Tue Feb 13 20:31:03 CET 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/pattern.c: added xsltMatchPattern()
	* libxslt/numbers.c: implemented "level=multiple" for xsl:number
